--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  margin: 0 ;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -40,3 +39,13 @@
 .read-the-docs {
   color: #888;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;    
+}
+
